# cockroach-reminder-gpui

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
packaging/linux/: cockroach-reminder.desktop
packaging/macos/: Info.plist
scripts/: package-release.ps1  package-release.sh
src/: app.rs  cockroach.rs  config.rs  constants.rs  main.rs  overlay_view.rs  platform.rs  settings_view.rs  timer.rs  tray.rs
